res/examples/valid/if_else_expression_with_prefix_expr_cond.eg
if 10 < 0 { false } else { true };
if 10 <= 0 { false } else { true };
if 10 > 0 { false } else { true };
if 10 >= 0 { false } else { true };
if 10 == 0 { false } else { true };
if 10 != 0 { false } else { true };
