res/examples/invalid/if_expression_with_expr_cond.eg
if true { false };

// out: SyntaxError: unexpected "true"; expected: ["\"(\""]
// out: SyntaxError: unexpected "{"; expected: ["\"!=\"", "\"%\"", "\")\"", "\"*\"", "\"+\"", "\",\"", "\"-\"", "\"/\"", "\";\"", "\"<\"", "\"<=\"", "\"==\"", "\">\"", "\">=\"", "\"]\"", "\"and\"", "\"or\"", "\"}\""]